# beachparty-svelte

./: .gitignore  Cargo.toml  env.nu  package-lock.json  package.json  tailwind.config.js  vercel.json
api/: events.rs  register.rs
backend/api/: events.rs
backend/src/: lib.rs
src/: README.md  app.css  app.html
src/lib/: section.svelte  signup.svelte
src/lib/assets/: beach_gym.avif  modernismo.avif
src/routes/: +layout.svelte  +page.js  +page.svelte
src_rs/: auth.rs  config.rs  lib.rs  main.rs  sheets.rs
